Arm backend: Test TOSA, Ethos-U55 and Ethos-U85 on github
This will run some more models in the github test flow and
also enable some unit tests to use Corston3x0 FVP.

This structure up the Arm backend testing into separate runable
scripts in the same structure as other backends.

Signed-off-by: Zingo Andersen <zingo.andersen@arm.com>
Change-Id: I5e11b1aca19460845e330b84d0696513c400c0f0

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -354,13 +354,14 @@ jobs:
         EXECUTORCH_BUILD_ARM_BAREMETAL=ON \
         .ci/scripts/setup-linux.sh "${BUILD_TOOL}"
 
-        source .ci/scripts/utils.sh
         # Install Arm dependencies
-        install_arm
+        .ci/scripts/setup-arm_baremetal.sh
+        
+        # Test tosa_reference flow
+        source examples/arm/ethos-u-scratch/setup_path.sh
 
-        # Run pytest with coverage
-        pytest -c /dev/null -v -n auto --cov=./ --cov-report=xml backends/arm/test
-
+        # Run pytest
+        .ci/scripts/test_arm_baremetal.sh test_pytest
 
   test-llama-runner-qnn-linux:
     name: test-llama-runner-qnn-linux
