--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,12 +54,12 @@ dependencies=[
   "expecttest",
   "flatbuffers",
   "hypothesis",
-  "mpmath==1.3.0",
-  "numpy==1.21.3; python_version == '3.10'",
-  "numpy==1.23.2; python_version == '3.11'",
+  "mpmath",
+  "numpy; python_version == '3.10'",
+  "numpy; python_version == '3.11'",
   "numpy; python_version >= '3.12'",
   "packaging",
-  "pandas==2.0.3; python_version == '3.10'",
+  "pandas; python_version == '3.10'",
   "pandas; python_version >= '3.11'",
   "parameterized",
   "pytest",
